# AI-Trader

./: AGENT.md  README.md  main.py  pyproject.toml  requirements.txt  runtime_env.json
agent/base_agent/: base_crypto_agent.py
agent_tools/: start_mcp_services.py  tool_get_price_crypto.py  tool_trade_crypto.py
configs/: config_1.json  crypto_config.json
data/: btc_daily_ccxt.csv  download_btc_daily_ccxt.py  download_spx_daily_yfinance.py  spx_daily_yfinance.csv
data/agent_data/deepseek-chat-v3.1/log/2025-10-28/: log.jsonl
prompts/: crypto_agent_prompt.py
research/: m2_btc_liquidity_corr.ipynb
tools/crypto/: __init__.py  ccxt_client.py  position_tools.py  price_tools.py
