[project]
name = "ai-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ccxt>=4.3.75",
    "fastmcp==2.12.5",
    "ipykernel>=7.1.0",
    "langchain==1.0.2",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai==1.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "yfinance>=0.2.40",
]
